Code quality improvements: removed wild card imports and empty lines, other minor changes.